couleurs et tailles de point

--- a/tstRegle.ipynb
+++ b/tstRegle.ipynb
@@ -54,6 +54,7 @@
     }
    ],
    "source": [
+    "#fig, ax=plt.subplots()\n",
     "qt.draw()"
    ]
   },
@@ -344,6 +345,22 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "2cc94826",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b4a7e185-e388-4208-a4b7-16ac125dd904",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aca85f33-ffb9-47db-89be-d8bd78b67b31",
    "metadata": {},
    "outputs": [],
    "source": []
