vecteur n'est plus une méthode

--- a/tst.ipynb
+++ b/tst.ipynb
@@ -31,39 +31,16 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b25e9703-59c9-4685-a78e-a0ac80522f8f",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "isinstance(B,Point)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
    "id": "4a107d4d-2a5d-43f8-b4e4-a515156c209a",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Polygones.Polygone"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.5\n",
+      "Vecteur(2,-3)\n"
+     ]
     },
     {
      "data": {
@@ -86,12 +63,14 @@
     "B.draw(ax,namecolor = 'blue',s= 50)\n",
     "A.draw(ax,namecolor = 'orange', s=10)\n",
     "ABC.draw(ax,s=100, color='green', namecolor='red')\n",
-    "type(ABC)"
+    "type(ABC)\n",
+    "print(ABC.aire())\n",
+    "print(vecteur(A,B))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "67e7eb42-3a26-419e-b65b-deec87e0e96c",
    "metadata": {},
    "outputs": [
@@ -101,7 +80,7 @@
        "[Point(0,1,A), Point(2,-2,B), Point(-1,-1,C)]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "332b1be1-ee44-4273-af84-950de76fade6",
    "metadata": {
     "scrolled": true
@@ -139,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "fbd1cc46-3b7b-4735-b667-308c2215715a",
    "metadata": {},
    "outputs": [
@@ -154,10 +133,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x11200f5f0>"
+       "<matplotlib.legend.Legend at 0x109afaf00>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -195,17 +174,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "6c6d34a4-5c61-4bf5-94df-135bfbe52f28",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x111f3e2d0>"
+       "<matplotlib.legend.Legend at 0x109ac8770>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -243,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "e84ca716-9aaf-4f54-9b9f-f0f32dde9b8e",
    "metadata": {},
    "outputs": [
@@ -286,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "b1eb8348-edd7-4732-9b89-a6628c9e9687",
    "metadata": {},
    "outputs": [
@@ -308,7 +287,7 @@
        "('A', 'B', 'C')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "fec3ae2d-6292-4c63-833d-a4f0e016346d",
    "metadata": {},
    "outputs": [
@@ -362,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "ad616c15-254a-4ba8-a5a8-61fbb49f5fde",
    "metadata": {},
    "outputs": [
@@ -409,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "30262bc4-84d0-45ca-a50c-3817237d74bf",
    "metadata": {},
    "outputs": [
@@ -423,10 +402,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x112307470>"
+       "<matplotlib.legend.Legend at 0x109c13e00>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
