--- a/transformations.ipynb
+++ b/transformations.ipynb
@@ -117,7 +117,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x10c25ce00>"
+       "<matplotlib.legend.Legend at 0x114dcbb60>"
       ]
      },
      "execution_count": 4,
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "439ba199-97fd-4c3f-abb3-3b4b95173bbf",
    "metadata": {},
    "outputs": [
@@ -161,7 +161,7 @@
        "Text(0.5, 0.98, 'H est la projection orhogonale de P sur d')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
